--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,3 +1,4 @@
+  <hi class="title">SEARCH IMAGES</hi>
 
 <form class="search-form" id="search-form">
   <input
@@ -13,4 +14,4 @@
   <!-- Список <li> с карточками изображений -->
 </ul>
 
-<button class="load-more-btn" type="submit">Load more</button>
+<button class="is-hidden load-more-btn" data-load type="submit">Load more</button>
