--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -2,25 +2,29 @@
 
 body {
  background-color: black;
+ text-align: center;
 }
 
 ul {
   list-style: none;
 }
+.title{
+  display: block;
+  margin-top: 20px;
+  color: white;
+  font-size: 30px;
+}
 
 .search-input {
-  position: relative;
-  left: 50%;
+  position: relative;  
   padding: 7px;
   width: 400px;
-  transform: translateX(-50%)
+  height: 40px;  
 }
 
 
 .search-form {
-
- margin-top: 20px;
-
+ margin-top: 40px;
 }
 
 
@@ -36,12 +40,12 @@ ul {
  img {
   display: block;
   max-width: 100%;
-  height: auto;
+  
 }
 }
 
 .photo-card {
-  width: 350px;
+  width: 250px;  
   margin: 15px;
   padding: 5px;
   background-color: white;
@@ -58,15 +62,16 @@ ul {
   color: black;
 
 i {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 5px;
+  margin: 5 auto;
   color: black;
 }
 }
 
 .load-more-btn{
-  position: relative;
-  left: 50%;  
-  transform: translateX(-50%)
+  position: relative; 
+  margin-bottom: 40px;
+}
+
+.is-hidden{
+  display: none;
 }
