--- a/src/templates/image-card.hbs
+++ b/src/templates/image-card.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
     <li class="gallery-item">
         <div class="photo-card">
-        <img class = "photo" src="{{webformatURL}}" data-source={{largeImageURL}} alt="{{tags}}" />
+        <img class = "photo" src="{{webformatURL}}" data-show={{largeImageURL}} alt="{{tags}}" />
 
         <div class="stats">
             <p class="stats-item">
